<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Appsqlite</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Para el logueo -->
    <string name="texto_usuario">Ingrese el usuario</string>
    <string name="texto_clave">Ingrese una clave</string>
    <string name="texto_ingreso">Ingresar</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="title_activity_registro">RegistroActivity</string>

    <!-- Para el registro -->
    <string name="texto_usuario_registro">Ingrese el correo del usuario</string>
    <string name="texto_clave_registro">Ingrese la clave del usuario</string>
    <string name="texto_registro">Registrar usuario</string>
    
    
</resources>
