<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/raiz_padding" >

    <EditText
        android:id="@+id/txtusuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/txt_margin_bottom"
        android:ems="10"
        android:text="@string/texto_usuario" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtclave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/txt_margin_bottom"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/texto_clave" />

    <Button
        android:id="@+id/btningresa"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_ingreso" />

</LinearLayout>