<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/raiz_padding" >

    <EditText
        android:id="@+id/rtxt_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/txt_margin_bottom"
        android:hint="@string/texto_usuario_registro"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/rtxt_clave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/txt_margin_bottom"
        android:hint="@string/texto_clave_registro"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <Button
        android:onClick="ingresaUsuario"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_registro" />

</LinearLayout>